<resources>
    <string name="app_name">ContactosEnLaNube</string>
    <string name="agregarContactoTv">AGREGAR CONTACTO</string>
    <string name="agregarAgregarBt">AGREGAR</string>
    <string name="TituloNombre">Nombre</string>
    <string name="TituloApellido">Apellido</string>
    <string name="TituloTelefono">Telefono</string>
    <string name="TituloEmail">Correo</string>
    <string name="TextoVacio">Inserte Texto</string>
    <string name="agregar_nota">Nota</string>
    <string name="agregar_perfill">Agregar Perfil</string>
    <string name="mensajelistavacia">La lista es ta vacía</string>
    <string name="swich_mas_parametros">Mas parametros</string>
    <!-- String para agregar imagen de perdil-->
    <string name="agregarCamara">Camara</string>
    <string name="agregargalleria">Galleria</string>
    <string name="agregarColor">Color</string>
</resources>
